--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,27 @@ main > .tagline {
 	font-weight: 100;
 }
 
+post {
+	display: flex;
+	flex-direction: column;
+	min-height: 50vh;
+	justify-content: center;
+	padding: 0 30px;
+	text-align: center;
+}
+
+post > .intro {
+	font-family: 'Reem Kufi', sans-serif;
+	font-size: 3.75em;
+	font-weight: 600;
+}
+
+post > .tagline {
+	font-size: 1.5rem;
+	margin: 1.5rem 0;
+	font-weight: 100;
+}
+
 .icons-social i {
 	padding: 10px;
 }
