--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -183,7 +183,7 @@ img::-moz-selection {
 header.masthead {
   margin-bottom: 50px;
   background: no-repeat center center;
-  background-color: #f1a22c;
+  background-color: #303F9F;
   background-attachment: scroll;
   position: relative;
   background-size: cover;
