--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -1,17 +1,18 @@
-/*
- * Start Bootstrap - Clean Blog v5.0.7 (https://startbootstrap.com/template-overviews/clean-blog)
- * Copyright 2013-2019 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-clean-blog/blob/master/LICENSE)
+/*!
+ * Start Bootstrap - Clean Blog v5.0.9 (https://startbootstrap.com/themes/clean-blog)
+ * Copyright 2013-2020 Start Bootstrap
+ * Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-clean-blog/blob/master/LICENSE)
  */
 
 body {
-  color: #303F9F;
+  font-size: 20px;
+  color: #212529;
   font-family: 'Lora', 'Times New Roman', serif;
 }
 
 p {
   line-height: 1.5;
-  /*margin: 30px 0;*/
+  margin: 30px 0;
 }
 
 p a {
@@ -24,13 +25,12 @@ h3,
 h4,
 h5,
 h6 {
-  padding-top: 1.2em;
   font-weight: 800;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 a {
-  -webkit-transition: all 0.2s;
+  color: #212529;
   transition: all 0.2s;
 }
 
@@ -70,12 +70,6 @@ blockquote {
   color: #fff;
   background: #0085A1;
   text-shadow: none;
-}
-
-img {
-  width: 100%;
-  border-color: black;
-  border-style: double;
 }
 
 img::-moz-selection {
@@ -143,10 +137,8 @@ img::-moz-selection {
 
 @media only screen and (min-width: 992px) {
   #mainNav {
-    -webkit-transition: background-color 0.2s;
     transition: background-color 0.2s;
     /* Force Hardware Acceleration in WebKit */
-    -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
     -webkit-backface-visibility: hidden;
   }
@@ -154,10 +146,7 @@ img::-moz-selection {
     /* when the user scrolls down, we hide the header right above the viewport */
     position: fixed;
     top: -67px;
-    -webkit-transition: -webkit-transform 0.2s;
-    transition: -webkit-transform 0.2s;
     transition: transform 0.2s;
-    transition: transform 0.2s, -webkit-transform 0.2s;
     border-bottom: 1px solid white;
     background-color: rgba(255, 255, 255, 0.9);
   }
@@ -175,7 +164,6 @@ img::-moz-selection {
   }
   #mainNav.is-visible {
     /* if the user changes the scrolling direction, we show the header */
-    -webkit-transform: translate3d(0, 100%, 0);
     transform: translate3d(0, 100%, 0);
   }
 }
@@ -183,7 +171,7 @@ img::-moz-selection {
 header.masthead {
   margin-bottom: 50px;
   background: no-repeat center center;
-  background-color: #303F9F;
+  background-color: #868e96;
   background-attachment: scroll;
   position: relative;
   background-size: cover;
@@ -195,8 +183,8 @@ header.masthead .overlay {
   left: 0;
   height: 100%;
   width: 100%;
-  /*background-color: #212529;
-  opacity: 0.2;*/
+  background-color: #212529;
+  opacity: 0.5;
 }
 
 header.masthead .page-heading,
@@ -340,7 +328,6 @@ header.masthead .post-heading .meta a {
   border: none;
   border-radius: 0;
   background: none;
-  -webkit-box-shadow: none !important;
   box-shadow: none !important;
   font-family: 'Lora', 'Times New Roman', serif;
 }
@@ -359,10 +346,7 @@ header.masthead .post-heading .meta a {
   top: 2em;
   display: block;
   margin: 0;
-  -webkit-transition: top 0.3s ease, opacity 0.3s ease;
   transition: top 0.3s ease, opacity 0.3s ease;
-  vertical-align: middle;
-  vertical-align: baseline;
   opacity: 0;
 }
 
@@ -422,10 +406,4 @@ footer .copyright {
 .btn-lg {
   font-size: 16px;
   padding: 25px 35px;
-}
-
-pre {
-  background-color: #e4e4e4;
-  font-size: 0.7em;
-  padding: 10px;
 }
